# automated-plansets

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  data_export.py  geotiff_roof.py  google_solar.py  html_renderer.py  panel_placer.py  pdf_parser.py  planset_renderer.py  pyproject.toml  quebec_electrical.py  requirements.txt  roof_detector.py  satellite_fetch.py  solar_planset.py  test_chelsea.py
.claude/: launch.json  rebuild-frontend.sh  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
address/: building_selector.py  geocoder.py  google_solar.py  models.py
api/: address.py  equipment.py  projects.py  solar.py
catalog/: __init__.py  attachments.json  inverters.json  loader.py  panels.json  racking.json
engine/: __init__.py  bom_calculator.py  dsm_processor.py  electrical_calc.py  exceptions.py  geotiff_roof.py  layout_optimizer.py  parcel_boundary.py  pdf_exporter.py  proposal_generator.py  proposal_html.py  roof_analyzer.py  smart_placer.py  solar_api.py  system_sizer.py  terrain_mesh.py
importers/: __init__.py  opensolar.py
jurisdiction/: __init__.py  ahj_registry.json  base.py  cec_bc.py  cec_ontario.py  cec_quebec.py  nec_base.py  nec_california.py  nec_florida.py  nec_illinois.py  nec_newyork.py  nec_texas.py
logs/: multi_address_test_log.md
models/: __init__.py  equipment.py  project.py  roof_obstacle.py
renderer/: __init__.py  svg_helpers.py  title_block.py
tests/: reference_escalon_dr.py  test_chelsea.py  test_cross_jurisdiction.py  test_electrical_calc.py  test_mercator.py
training/: __init__.py  runner.py
ui/: index.html  (+4 more)
(+82 files in other folders)
